--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -5,5 +5,18 @@
       <small class="author">Submitted by <%= time_ago_in_words(link.created_at) %> by <%=
       link.user.email %></small>
     </h2>
+    <div class="btn-group">
+      <%= link_to link.url, class: 'btn btn-default btn-sm' do %>
+        Visit link
+      <% end %>
+      <%= link_to like_link_path(link), method: :put, class: 'btn btn-default btn-sm' do %>
+        <span class="glyphicon glyphicon-chevron-up"></span>Upvote
+        <%= link.get_upvotes.size %>
+      <% end %>
+      <%= link_to dislike_link_path(link), method: :put, class: 'btn btn-default btn-sm' do %>
+        <span class="glyphicon glyphicon-chevron-down">Downvote</span>
+        <%= link.get_downvotes.size %>
+      <% end %>
+    </div>
   </div>
 <% end %>
