--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -26,3 +26,18 @@
     <%= @link.get_downvotes.size %>
   <% end %>
 </div>
+
+<h3 class="comments_title">
+  <%= @link.comments.count %> Comments
+</h3>
+
+<div id="comments">
+  <%= render partial: @link.comments %>
+</div>
+
+<%= form_for [@link, Comment.new] do |f| %>
+  <div class="form-group">
+    <%= f.text_area :body, class: 'form-control' %>
+  </div>
+  <%= f.submit 'Submit Comment', class: 'btn btn-primary' %>
+<% end %>
